# Learn-Microservices

./: compose.yml
ms1/: Dockerfile  pyproject.toml
ms1/ms1/: main.py  schema.py
