[tool.poetry]
name = "ms1"
version = "0.1.0"
description = ""
authors = ["Muhammad Rafi Ali <therafiali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
aiokafka = "^0.10.0"
protobuf = "^5.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
